--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@ rust-version = "1.56"
 serde = "1.0.69"
 
 [dev-dependencies]
-serde = { version = "1", features = ["rc"] }
-serde_derive = "1"
+serde = { version = "1", features = ["rc", "derive"] }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
